# zitadel-rust

./: .gitignore  .gitmodules  .releaserc.json  Cargo.toml  README.md  buf.gen.yaml  build.rs  justfile  renovate.json  security-check.yml  testing.yml
.github/workflows/: manual_test.yaml  release.yml  security-check.yml  testing.yml
.kreya/: ZITADEL Rust.krproj  directory.krpref
.kreya/actix/: directory.krpref
.kreya/rocket/: Authorized Request.krop  Unauthorized Request.krop
crates/zitadel/: Cargo.toml  README.md
crates/zitadel-examples/: Cargo.toml  README.md
crates/zitadel-examples/src/: actix_webapi_oauth_interception_basic.rs  lib.rs
crates/zitadel-gen/: Cargo.toml  README.md  build.rs
crates/zitadel-gen/src/: lib.rs
crates/zitadel-gen/src/api/: mod.rs  zitadel.action.v1.rs  zitadel.admin.v1.rs  zitadel.admin.v1.tonic.rs  zitadel.app.v1.rs  zitadel.auth.v1.rs  zitadel.auth.v1.tonic.rs  zitadel.authn.v1.rs  zitadel.change.v1.rs  zitadel.event.v1.rs  zitadel.feature.v1.rs  zitadel.feature.v2.rs  zitadel.feature.v2.tonic.rs  zitadel.feature.v2beta.rs  zitadel.feature.v2beta.tonic.rs  zitadel.idp.v1.rs  zitadel.idp.v2.rs  zitadel.idp.v2.tonic.rs  zitadel.instance.v1.rs  zitadel.management.v1.rs  zitadel.management.v1.tonic.rs  zitadel.member.v1.rs  zitadel.metadata.v1.rs  zitadel.milestone.v1.rs  zitadel.object.v2.rs  zitadel.object.v3alpha.rs  zitadel.oidc.v2.rs  zitadel.oidc.v2.tonic.rs  zitadel.oidc.v2beta.rs  zitadel.oidc.v2beta.tonic.rs  zitadel.org.v1.rs  zitadel.org.v2.rs  zitadel.org.v2.tonic.rs  zitadel.org.v2beta.rs  zitadel.org.v2beta.tonic.rs  zitadel.policy.v1.rs  zitadel.project.v1.rs  zitadel.protoc_gen_zitadel.v2.rs  zitadel.quota.v1.rs  zitadel.resources.action.v3alpha.rs  (+32 more)
crates/zitadel/examples/: actions_v3_webhook.rs  rocket_webapi_oauth_interception_basic.rs  service_account_authentication.rs
crates/zitadel/src/: lib.rs
crates/zitadel/src/actions/: README.md  helpers.rs  mod.rs  types.rs  verification.rs
crates/zitadel/src/actix/introspection/: config_builder.rs  extractor.rs
crates/zitadel/src/api/: clients.rs  interceptors.rs  mod.rs
crates/zitadel/src/axum/: actions.rs  mod.rs
crates/zitadel/src/axum/introspection/: mod.rs  state_builder.rs  user.rs
crates/zitadel/src/credentials/: jwt.rs  service_account.rs
crates/zitadel/src/oidc/: discovery.rs
crates/zitadel/src/oidc/introspection/: claims.rs  mod.rs
crates/zitadel/src/oidc/introspection/cache/: in_memory.rs  mod.rs
crates/zitadel/src/rocket/: mod.rs
crates/zitadel/src/rocket/introspection/: guard.rs
examples/: axum_webapi_oauth_interception_basic.rs  fetch_profile_with_pat.rs  fetch_profile_with_service_account.rs  rocket_webapi_oauth_interception_basic.rs  rocket_webapi_oauth_interception_jwtprofile.rs  rocket_webapi_oauth_interception_jwtprofile_cached.rs  service_account_authentication.rs
grpc-helper/: Cargo.toml
grpc-helper/src/: lib.rs
src/: grpc.rs  lib.rs  zitadel.rs
src/actix/: mod.rs
src/actix/introspection/: config.rs  config_builder.rs  extractor.rs  mod.rs
src/api/: api.rs  clients.rs  interceptors.rs  mod.rs
src/axum/: mod.rs
src/axum/introspection/: mod.rs  state.rs  state_builder.rs  user.rs
src/credentials/: application.rs  mod.rs  service_account.rs
src/grpc/: api.rs  clients.rs  interceptors.rs  mod.rs
src/oidc/: discovery.rs  introspection.rs  mod.rs
src/oidc/introspection/: mod.rs
src/oidc/introspection/cache/: in_memory.rs  mod.rs
src/rocket/: mod.rs  oauth_interception.rs
src/rocket/introspection/: config.rs  config_builder.rs  guard.rs  mod.rs
zitadel/: Cargo.toml
zitadel-proto/: .gitignore  Cargo.toml  buf.gen.yaml  justfile
zitadel/src/actix/introspection/: config.rs  extractor.rs  mod.rs
zitadel/src/api/: clients.rs  interceptors.rs  mod.rs
zitadel/src/axum/introspection/: mod.rs  user.rs
zitadel/src/credentials/: mod.rs
zitadel/src/oidc/: discovery.rs
zitadel/src/oidc/introspection/cache/: in_memory.rs
zitadel/src/rocket/introspection/: config.rs  guard.rs
