[package]
name = "zitadel-examples"
description = "An implementation of ZITADEL API access and authentication in Rust."
version = "0.0.0-development"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Christoph Bühler <christoph@smartive.ch>"]
repository = "https://github.com/buehler/zitadel-rust"
keywords = ["ZITADEL", "gRPC", "clients", "authentication", "oidc"]
categories = ["authentication", "api-bindings"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

[[example]]
name = "actix_webapi_oauth_interception_basic"
required-features = ["actix"]
path = "src/actix_webapi_oauth_interception_basic.rs"

[[example]]
name = "axum_webapi_oauth_interception_basic"
required-features = ["axum"]
path = "src/axum_webapi_oauth_interception_basic.rs"

[[example]]
name = "fetch_profile_with_pat"
required-features = ["zitadel/api", "zitadel/interceptors"]
path = "src/fetch_profile_with_pat.rs"

[[example]]
name = "fetch_profile_with_service_account"
required-features = ["zitadel/api", "zitadel/interceptors"]
path = "src/fetch_profile_with_service_account.rs"

[[example]]
name = "rocket_webapi_oauth_interception_basic"
required-features = ["rocket"]
path = "src/rocket_webapi_oauth_interception_basic.rs"

[[example]]
name = "rocket_webapi_oauth_interception_jwtprofile_cached"
required-features = ["rocket", "zitadel/introspection_cache"]
path = "src/rocket_webapi_oauth_interception_jwtprofile_cached.rs"

[[example]]
name = "rocket_webapi_oauth_interception_jwtprofile"
required-features = ["rocket"]
path = "src/rocket_webapi_oauth_interception_jwtprofile.rs"

[[example]]
name = "service_account_authentication"
required-features = ["zitadel/credentials"]
path = "src/service_account_authentication.rs"

[features]
## Feature that enables support for the [axum framework](https://docs.rs/axum/latest/axum/).
axum = ["zitadel/credentials", "zitadel/oidc", "dep:axum", "dep:axum-extra"]

## The credentials feature enables special credentials helpers for ZITADEL.
## For example, it allows the user to create a ZITADEL service account and
## authenticate against ZITADEL.
credentials = ["dep:jsonwebtoken", "dep:openidconnect", "dep:reqwest", "dep:serde", "dep:serde_json", "dep:serde_urlencoded", "dep:time"]

## The interceptors feature enables specific gRPC interceptors and
## new convenience functions to create a gRPC client with interceptors.
## The interceptors provide easy access to an authenticated ZITADEL API client.
## The interceptors work with the credentials from this crate.
interceptors = ["zitadel/credentials", "dep:time", "dep:tokio"]

## This feature enables caching of the OIDC discovery and introspection results.
## By default, only the in-memory cache is available. To use a different cache,
## enable specific features of this crate, or implement your own cache with
## the trait.
introspection_cache = ["dep:async-trait", "dep:time", "dep:moka"]

## The OIDC module enables basic OIDC (OpenID Connect) features to communicate
## with ZITADEL. Two examples are the `discover` and `introspect` functions.
## The OIDC features are required for some of the web framework features.
oidc = ["zitadel/credentials", "dep:base64-compat"]

## Feature that enables support for the [rocket framework](https://rocket.rs/).
## It enables authentication features for rocket in the form of route guards.
## Refer to the rocket module for more information.
rocket = ["zitadel/credentials", "zitadel/oidc", "dep:rocket"]

## Feature that enables support for the [rocket okapi](https://github.com/GREsau/okapi).
rocket_okapi = ["rocket", "dep:rocket_okapi", "dep:schemars"]

[dependencies]
zitadel = { path = "../zitadel", optional = true }
actix-web = { version = "4.5.1", optional = true }
axum = { version = "0.8.0", features = ["macros"], optional = true }
rocket = { version = "0.5.0", optional = true }
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
] , optional = true}

async-trait = { version = "0.1.80", optional = true }

axum-extra = { version = "0.10.0", optional = true, features = ["typed-header"] } #0.11.0 is yanked
base64-compat = { version = "1", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
moka = { version = "0.12.8", features = ["future"], optional = true }
openidconnect = { version = "3.5.0", optional = true }
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], default-features = false, optional = true }

serde = { version = "1.0.200", features = ["derive"], optional = true }
serde_json = { version = "1.0.116", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
time = { version = "0.3.36", optional = true }

rocket_okapi = { version = "0.9.0", optional = true, default-features = false }
schemars = {version = "0.8.21", optional = true}