[package]
name = "zitadel-examples"
description = "An implementation of ZITADEL API access and authentication in Rust."
version = "0.0.0-development"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Christoph Bühler <christoph@smartive.ch>"]
repository = "https://github.com/buehler/zitadel-rust"
keywords = ["ZITADEL", "gRPC", "clients", "authentication", "oidc"]
categories = ["authentication", "api-bindings"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

[lib]
name = "zitadel_examples"
path = "src/lib.rs"
doctest = false

[[example]]
name = "actix_webapi_oauth_interception_basic"
required-features = ["actix"]
path = "src/actix_webapi_oauth_interception_basic.rs"

[[example]]
name = "axum_webapi_oauth_interception_basic"
required-features = ["axum"]
path = "src/axum_webapi_oauth_interception_basic.rs"

[[example]]
name = "fetch_profile_with_pat"
required-features = ["zitadel/api", "zitadel/interceptors" , "tokio"]
path = "src/fetch_profile_with_pat.rs"

[[example]]
name = "fetch_profile_with_service_account"
required-features = ["zitadel/api", "zitadel/interceptors", "tokio"]
path = "src/fetch_profile_with_service_account.rs"

[[example]]
name = "rocket_webapi_oauth_interception_basic"
required-features = ["rocket"]
path = "src/rocket_webapi_oauth_interception_basic.rs"

[[example]]
name = "rocket_webapi_oauth_interception_jwtprofile_cached"
required-features = ["rocket", "zitadel/introspection_cache"]
path = "src/rocket_webapi_oauth_interception_jwtprofile_cached.rs"

[[example]]
name = "rocket_webapi_oauth_interception_jwtprofile"
required-features = ["rocket"]
path = "src/rocket_webapi_oauth_interception_jwtprofile.rs"

[[example]]
name = "service_account_authentication"
required-features = ["zitadel/credentials" , "tokio"]
path = "src/service_account_authentication.rs"

[features]
actix = ["dep:actix-web", "zitadel/actix"]

## Feature that enables support for the [axum framework](https://docs.rs/axum/latest/axum/).
axum = ["zitadel/credentials", "zitadel/oidc", "dep:axum", "dep:axum-extra"]

## Feature that enables support for the [rocket framework](https://rocket.rs/).
## It enables authentication features for rocket in the form of route guards.
## Refer to the rocket module for more information.
rocket = ["zitadel/credentials", "zitadel/oidc", "dep:rocket"]

## Feature that enables support for the [rocket okapi](https://github.com/GREsau/okapi).
rocket_okapi = ["rocket", "dep:rocket_okapi", "dep:schemars"]

tokio = ["dep:tokio"]

[dependencies]
zitadel = { path = "../zitadel", optional = true }
actix-web = { version = "4.5.1", optional = true }
axum = { version = "0.8.0", features = ["macros"], optional = true }
rocket = { version = "0.5.0", optional = true }
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
] , optional = true}

async-trait = { version = "0.1.80", optional = true }

axum-extra = { version = "0.10.0", optional = true, features = ["typed-header"] } #0.11.0 is yanked
base64-compat = { version = "1", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
moka = { version = "0.12.8", features = ["future"], optional = true }
openidconnect = { version = "4.0.0", optional = true }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

serde = { version = "1.0.200", features = ["derive"], optional = true }
serde_json = { version = "1.0.116", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
time = { version = "0.3.36", optional = true }

rocket_okapi = { version = "0.9.0", optional = true, default-features = false }
schemars = {version = "0.8.21", optional = true}